<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="billTextView">Bill total</string>
    <string name="zeroDollarAmount">0.00</string>
    <string name="tenTextView">10%</string>
    <string name="fifteenTextView">15%</string>
    <string name="twentyTextView">20%</string>
    <string name="tipTextView">Tip</string>
    <string name="totalTextView">Total</string>
    <string name="customTextView">Custom</string>
    <string name="customTipTextView">18%</string>
    <string name="tipCustomTextView">Tip</string>
    <string name="totalCustomTextView">Total</string>

</resources>
